# HyperGraph-Isomorphism-Checker

./: .gitignore  .pre-commit-config.yaml  Graph1.json  Graph_cycle.json  InputFormat.json  Makefile  Notes  OpenHypergraphColouring.md  README.md  app.py  graph_visualiser_app.py  main.py  mkdocs.yml  pyproject.toml  trial.sh
.github/workflows/: ci.yml  deploy.yml
.metadata/: .lock_info  version.ini
IsomorphChecker/: .cproject  .project
IsomorphChecker/Release/: makefile  sources.mk
IsomorphChecker/src/: DataStructures.h  DebugHistogram.h  IsomorphChecker.cpp
cuda-code/: Hypergraph_IsomorphismCUDA_11Feb.docx  Readme.md  WSLTheory.odt
cuda-code/Input/: Beta_Reduction.json  Bipartite_Hypergraph.json  Church_Numeral_2.json  Complete_K5_Directed.json  Constant_Function.json  DrugALarge.json  DrugBLarge.json  Generator_Function.json  Grid_5x5.json  High_Arity_Hyperedge.json  High_Density_N50.json  Induction_Proof_Structure.json  Lambda_Addition.json  Large_Sparse_N500.json  Linear_Chain_20.json  Medium_Density_N100.json  Miyazaki_100_A.json  Miyazaki_100_B.json  Modus_Ponens.json  Parallel_Edges.json  Pi_Type_Formation.json  Realistic_Coq_Proof_N200.json  Rook.json  RookN.json  Self_Loop_Chain.json  Shirk.json  Star_Hypergraph.json  Symmetric_Complete_N20.json  Type_Checking_Addition.json
cuda-code/IsomorphChecker/src/: .cproject  CMakeLists.txt  DataStructures.h  GraphIO.h  InputDataStructures.h  IsomorphChecker.cpp
cuda-code/IsomorphChecker/src/GPU_Solver/: CUDA_Functions.cu  CUDA_Functions.h  CUDA_Kernels.cuh  CUDA_KernelsBulkStats.cuh  CUDA_KernelsWL1.cuh  CUDA_KernelsWL3.cuh
demo_notebooks/: GraphIsomorphisms.ipynb
docs/: Algorithm.md  contributing.md  examples.md  index.md
docs/api/: diagram.md  draw.md  edge.md  graph.md  graph_utils.md  hyperedge.md  hypergraph.md  isomorphisms.md  node.md  signature.md  utilities.md  validation.md
examples/: check_isomorphismSerial.py  draw_example.py  random_graph_generation.py
misc/: IsoMorpTests_WL.py  notes.md
proof_checker/: diagram.py  edge.py  graph.py  hyperedge.py  hypergraph.py
public/: index.html
rust-interface/: Cargo.toml  build.rs  process.c
rust-interface/src/: main.rs
src/: App.css  index.css  main.py
tests/: main.py  test_diagram.py  test_edge.py  test_graph.py  test_hyper_edge.py  test_node.py  test_open_hypergraph.py
(+126 files in other folders)
